json 파일을 ChromaDB로 저장하기

--- a/news_json2ChromaDB.ipynb
+++ b/news_json2ChromaDB.ipynb
@@ -17,7 +17,7 @@
       ],
       "metadata": {
         "id": "UUH9kn-POJMo",
-        "outputId": "fd1bc14e-7999-4ad5-ac2d-140dd50d2f9e",
+        "outputId": "093cd882-b85f-4ba7-edd1-a89de03c59ab",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -138,12 +138,13 @@
         "from chromadb import PersistentClient\n",
         "from chromadb.config import Settings\n",
         "import json\n",
-        "import uuid"
+        "import uuid\n",
+        "import shutil"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 3,
       "id": "b29d5de8-411f-4337-8079-0e38e8980d2b",
       "metadata": {
         "id": "b29d5de8-411f-4337-8079-0e38e8980d2b"
@@ -182,14 +183,21 @@
       ],
       "metadata": {
         "id": "qmq08FM6Offg",
-        "outputId": "f2b7e01d-1626-4beb-99e5-c11d0d886751",
+        "outputId": "6fb3faab-34e8-4575-da9f-5c2ecf96f4e6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "qmq08FM6Offg",
-      "execution_count": 8,
+      "execution_count": 4,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/root/.cache/chroma/onnx_models/all-MiniLM-L6-v2/onnx.tar.gz: 100%|██████████| 79.3M/79.3M [00:03<00:00, 26.3MiB/s]\n"
+          ]
+        },
         {
           "output_type": "stream",
           "name": "stdout",
@@ -211,11 +219,11 @@
         "\n",
         "for doc, meta in zip(results['documents'][0], results['metadatas'][0]):\n",
         "    print(f\"제목: {meta['title']} / 날짜: {meta['date']} / 언론사: {meta['journal']}\")\n",
-        "    print(f\"요약: {doc[:100]}...\\n\")"
+        "    print(f\"내용: {doc[:100]}...\\n\")"
       ],
       "metadata": {
         "id": "jk66Kv0nOnHf",
-        "outputId": "0ae67472-371c-4aa1-b3a8-ea6085fe2990",
+        "outputId": "7c804953-8327-4c40-e85e-0e79832a88d8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -227,15 +235,45 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "제목: [부고]박성준(경기대학교 스포츠과학부 교수)씨 모친상 / 날짜: 2025-05-04 14:41 / 언론사: 뉴시스\n",
+            "내용: [수원=뉴시스]▲신옥분씨 별세, 박성준(경기대 스포츠과학부 교수)씨 모친상=4일, 서울성모 장례식장 8호실, 발인 6일 오전 9시40분. 02-2258-5965...\n",
+            "\n",
             "제목: LGU+, e스포츠 행사에서 와이파이7 체험 부스 운영 / 날짜: 2025-05-02 11:31 / 언론사: 헤럴드경제\n",
-            "요약: ‘젠지 홈스탠드’ 메인 스폰서 참여와이파이7, 4배 빠른 속도 체감‘2025 젠지 홈스탠드’에 설치될 LG유플러스의 와이파이7 체험부스 조감도  [LG유플러스 제공]LG유플러스가 ...\n",
+            "내용: ‘젠지 홈스탠드’ 메인 스폰서 참여와이파이7, 4배 빠른 속도 체감‘2025 젠지 홈스탠드’에 설치될 LG유플러스의 와이파이7 체험부스 조감도  [LG유플러스 제공]LG유플러스가 ...\n",
             "\n",
             "제목: LGU+, e스포츠 행사서 '와이파이7' 경쟁력 선보인다 / 날짜: 2025-05-02 08:45 / 언론사: Unknown\n",
-            "요약: LG유플러스 CI. /사진=LG유플러스LG유플러스는 e스포츠 팬들이 모이는 '2025 젠지(Gen.G Esports) 홈스탠드' 행사에서 '와이파이7' 체험 부스를 운영한다고 2일...\n",
-            "\n",
-            "제목: 구미 亞육상대회 2천명 참가 ‘역대 최대’ / 날짜: 2025-05-06 14:47 / 언론사: 스포츠동아\n",
-            "요약: 김장호 구미시장(왼쪽)과 육상스타 우상혁 선수가 기념촬영을 하고 있다. 사진제공ㅣ구미시‘별들이 뜬다, 구미가 뜬다’…2025 亞육상대회 27일 개막43개국 2000명 참가 역대 최...\n",
+            "내용: LG유플러스 CI. /사진=LG유플러스LG유플러스는 e스포츠 팬들이 모이는 '2025 젠지(Gen.G Esports) 홈스탠드' 행사에서 '와이파이7' 체험 부스를 운영한다고 2일...\n",
             "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!zip -r news_chroma_db.zip news_chroma_db"
+      ],
+      "metadata": {
+        "id": "34IfEqj0UwED",
+        "outputId": "410bb8ab-56ec-4d3e-dcff-437cea1f2b6a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "34IfEqj0UwED",
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "  adding: news_chroma_db/ (stored 0%)\n",
+            "  adding: news_chroma_db/6b05eeff-fc5b-4d06-aede-601cdc2ec945/ (stored 0%)\n",
+            "  adding: news_chroma_db/6b05eeff-fc5b-4d06-aede-601cdc2ec945/length.bin (deflated 100%)\n",
+            "  adding: news_chroma_db/6b05eeff-fc5b-4d06-aede-601cdc2ec945/data_level0.bin (deflated 100%)\n",
+            "  adding: news_chroma_db/6b05eeff-fc5b-4d06-aede-601cdc2ec945/header.bin (deflated 61%)\n",
+            "  adding: news_chroma_db/6b05eeff-fc5b-4d06-aede-601cdc2ec945/link_lists.bin (stored 0%)\n",
+            "  adding: news_chroma_db/chroma.sqlite3 (deflated 63%)\n"
           ]
         }
       ]
