json 파일을 ChromaDB에 저장

--- a/news_json2ChromaDB.ipynb
+++ b/news_json2ChromaDB.ipynb
@@ -17,7 +17,7 @@
       ],
       "metadata": {
         "id": "UUH9kn-POJMo",
-        "outputId": "093cd882-b85f-4ba7-edd1-a89de03c59ab",
+        "outputId": "d937a3f0-467b-4aa5-812c-b8420a1bbab2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -127,7 +127,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 2,
       "id": "3cbc83ba-2fab-4267-8d54-b9e8af96a46e",
       "metadata": {
         "id": "3cbc83ba-2fab-4267-8d54-b9e8af96a46e"
@@ -210,7 +210,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 이미 저장된 DB 불러오기\n",
+        "# DB 불러오기\n",
         "client = PersistentClient(path=\"news_chroma_db\")\n",
         "collection = client.get_collection(\"news_articles\")\n",
         "\n",
@@ -254,11 +254,11 @@
         "!zip -r news_chroma_db.zip news_chroma_db"
       ],
       "metadata": {
-        "id": "34IfEqj0UwED",
-        "outputId": "410bb8ab-56ec-4d3e-dcff-437cea1f2b6a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "34IfEqj0UwED",
+        "outputId": "410bb8ab-56ec-4d3e-dcff-437cea1f2b6a"
       },
       "id": "34IfEqj0UwED",
       "execution_count": 8,
@@ -280,11 +280,91 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# zip 파일로 저장된 ChromaDB 압축 풀기\n",
+        "!unzip -o news_chroma_db.zip"
+      ],
       "metadata": {
-        "id": "2kRoJxiZPB2I"
+        "id": "7eiPxHx3VcB1",
+        "outputId": "bdb41457-dca3-4349-f6fa-6b7b00fb3a38",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "7eiPxHx3VcB1",
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Archive:  news_chroma_db.zip\n",
+            "   creating: news_chroma_db/\n",
+            "   creating: news_chroma_db/6b05eeff-fc5b-4d06-aede-601cdc2ec945/\n",
+            "  inflating: news_chroma_db/6b05eeff-fc5b-4d06-aede-601cdc2ec945/data_level0.bin  \n",
+            "  inflating: news_chroma_db/6b05eeff-fc5b-4d06-aede-601cdc2ec945/header.bin  \n",
+            "  inflating: news_chroma_db/6b05eeff-fc5b-4d06-aede-601cdc2ec945/length.bin  \n",
+            " extracting: news_chroma_db/6b05eeff-fc5b-4d06-aede-601cdc2ec945/link_lists.bin  \n",
+            "  inflating: news_chroma_db/chroma.sqlite3  \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 똑같이 사용 가능\n",
+        "client = PersistentClient(path=\"news_chroma_db\")\n",
+        "collection = client.get_collection(\"news_articles\")\n",
+        "\n",
+        "# 예: 골프 관련 검색\n",
+        "results = collection.query(query_texts=[\"골프\"], n_results=3)\n",
+        "\n",
+        "for doc, meta in zip(results['documents'][0], results['metadatas'][0]):\n",
+        "    print(f\"제목: {meta['title']} / 날짜: {meta['date']} / 언론사: {meta['journal']}\")\n",
+        "    print(f\"내용: {doc[:100]}...\\n\")"
+      ],
+      "metadata": {
+        "id": "2kRoJxiZPB2I",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5a72e480-c1ec-42cd-d708-a56d23f592d5"
       },
       "id": "2kRoJxiZPB2I",
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/root/.cache/chroma/onnx_models/all-MiniLM-L6-v2/onnx.tar.gz: 100%|██████████| 79.3M/79.3M [00:01<00:00, 71.1MiB/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "제목: [부고]박성준(경기대학교 스포츠과학부 교수)씨 모친상 / 날짜: 2025-05-04 14:41 / 언론사: 뉴시스\n",
+            "내용: [수원=뉴시스]▲신옥분씨 별세, 박성준(경기대 스포츠과학부 교수)씨 모친상=4일, 서울성모 장례식장 8호실, 발인 6일 오전 9시40분. 02-2258-5965...\n",
+            "\n",
+            "제목: LGU+, e스포츠 행사에서 와이파이7 체험 부스 운영 / 날짜: 2025-05-02 11:31 / 언론사: 헤럴드경제\n",
+            "내용: ‘젠지 홈스탠드’ 메인 스폰서 참여와이파이7, 4배 빠른 속도 체감‘2025 젠지 홈스탠드’에 설치될 LG유플러스의 와이파이7 체험부스 조감도  [LG유플러스 제공]LG유플러스가 ...\n",
+            "\n",
+            "제목: LGU+, e스포츠 행사서 '와이파이7' 경쟁력 선보인다 / 날짜: 2025-05-02 08:45 / 언론사: Unknown\n",
+            "내용: LG유플러스 CI. /사진=LG유플러스LG유플러스는 e스포츠 팬들이 모이는 '2025 젠지(Gen.G Esports) 홈스탠드' 행사에서 '와이파이7' 체험 부스를 운영한다고 2일...\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "lucpJzodVr0E"
+      },
+      "id": "lucpJzodVr0E",
       "execution_count": null,
       "outputs": []
     }
