--- a/news_json2ChromaDB.ipynb
+++ b/news_json2ChromaDB.ipynb
@@ -2,9 +2,10 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "id": "a88febba",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/mingd00/News-RAG/blob/main/news_json2ChromaDB.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -12,22 +13,19 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install chromadb"
-      ],
+      "execution_count": 1,
+      "id": "UUH9kn-POJMo",
       "metadata": {
-        "id": "UUH9kn-POJMo",
-        "outputId": "d937a3f0-467b-4aa5-812c-b8420a1bbab2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "UUH9kn-POJMo",
+        "outputId": "d937a3f0-467b-4aa5-812c-b8420a1bbab2"
       },
-      "id": "UUH9kn-POJMo",
-      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Requirement already satisfied: chromadb in /usr/local/lib/python3.11/dist-packages (1.0.8)\n",
             "Requirement already satisfied: build>=1.0.3 in /usr/local/lib/python3.11/dist-packages (from chromadb) (1.2.2.post1)\n",
@@ -123,6 +121,9 @@
             "Requirement already satisfied: pyasn1<0.7.0,>=0.6.1 in /usr/local/lib/python3.11/dist-packages (from pyasn1-modules>=0.2.1->google-auth>=1.0.1->kubernetes>=28.1.0->chromadb) (0.6.1)\n"
           ]
         }
+      ],
+      "source": [
+        "!pip install chromadb"
       ]
     },
     {
@@ -160,6 +161,31 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
+      "id": "qmq08FM6Offg",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qmq08FM6Offg",
+        "outputId": "6fb3faab-34e8-4575-da9f-5c2ecf96f4e6"
+      },
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/root/.cache/chroma/onnx_models/all-MiniLM-L6-v2/onnx.tar.gz: 100%|██████████| 79.3M/79.3M [00:03<00:00, 26.3MiB/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "✅ ChromaDB에 저장 완료\n"
+          ]
+        }
+      ],
       "source": [
         "# 3. JSON 파일 로드\n",
         "with open(\"sports_news.json\", \"r\", encoding=\"utf-8\") as f:\n",
@@ -180,35 +206,36 @@
         "    )\n",
         "\n",
         "print(\"✅ ChromaDB에 저장 완료\")"
-      ],
-      "metadata": {
-        "id": "qmq08FM6Offg",
-        "outputId": "6fb3faab-34e8-4575-da9f-5c2ecf96f4e6",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "id": "qmq08FM6Offg",
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/root/.cache/chroma/onnx_models/all-MiniLM-L6-v2/onnx.tar.gz: 100%|██████████| 79.3M/79.3M [00:03<00:00, 26.3MiB/s]\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "✅ ChromaDB에 저장 완료\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 9,
+      "id": "jk66Kv0nOnHf",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jk66Kv0nOnHf",
+        "outputId": "7c804953-8327-4c40-e85e-0e79832a88d8"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "제목: [부고]박성준(경기대학교 스포츠과학부 교수)씨 모친상 / 날짜: 2025-05-04 14:41 / 언론사: 뉴시스\n",
+            "내용: [수원=뉴시스]▲신옥분씨 별세, 박성준(경기대 스포츠과학부 교수)씨 모친상=4일, 서울성모 장례식장 8호실, 발인 6일 오전 9시40분. 02-2258-5965...\n",
+            "\n",
+            "제목: LGU+, e스포츠 행사에서 와이파이7 체험 부스 운영 / 날짜: 2025-05-02 11:31 / 언론사: 헤럴드경제\n",
+            "내용: ‘젠지 홈스탠드’ 메인 스폰서 참여와이파이7, 4배 빠른 속도 체감‘2025 젠지 홈스탠드’에 설치될 LG유플러스의 와이파이7 체험부스 조감도  [LG유플러스 제공]LG유플러스가 ...\n",
+            "\n",
+            "제목: LGU+, e스포츠 행사서 '와이파이7' 경쟁력 선보인다 / 날짜: 2025-05-02 08:45 / 언론사: Unknown\n",
+            "내용: LG유플러스 CI. /사진=LG유플러스LG유플러스는 e스포츠 팬들이 모이는 '2025 젠지(Gen.G Esports) 홈스탠드' 행사에서 '와이파이7' 체험 부스를 운영한다고 2일...\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# DB 불러오기\n",
         "client = PersistentClient(path=\"news_chroma_db\")\n",
@@ -220,39 +247,12 @@
         "for doc, meta in zip(results['documents'][0], results['metadatas'][0]):\n",
         "    print(f\"제목: {meta['title']} / 날짜: {meta['date']} / 언론사: {meta['journal']}\")\n",
         "    print(f\"내용: {doc[:100]}...\\n\")"
-      ],
-      "metadata": {
-        "id": "jk66Kv0nOnHf",
-        "outputId": "7c804953-8327-4c40-e85e-0e79832a88d8",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "id": "jk66Kv0nOnHf",
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "제목: [부고]박성준(경기대학교 스포츠과학부 교수)씨 모친상 / 날짜: 2025-05-04 14:41 / 언론사: 뉴시스\n",
-            "내용: [수원=뉴시스]▲신옥분씨 별세, 박성준(경기대 스포츠과학부 교수)씨 모친상=4일, 서울성모 장례식장 8호실, 발인 6일 오전 9시40분. 02-2258-5965...\n",
-            "\n",
-            "제목: LGU+, e스포츠 행사에서 와이파이7 체험 부스 운영 / 날짜: 2025-05-02 11:31 / 언론사: 헤럴드경제\n",
-            "내용: ‘젠지 홈스탠드’ 메인 스폰서 참여와이파이7, 4배 빠른 속도 체감‘2025 젠지 홈스탠드’에 설치될 LG유플러스의 와이파이7 체험부스 조감도  [LG유플러스 제공]LG유플러스가 ...\n",
-            "\n",
-            "제목: LGU+, e스포츠 행사서 '와이파이7' 경쟁력 선보인다 / 날짜: 2025-05-02 08:45 / 언론사: Unknown\n",
-            "내용: LG유플러스 CI. /사진=LG유플러스LG유플러스는 e스포츠 팬들이 모이는 '2025 젠지(Gen.G Esports) 홈스탠드' 행사에서 '와이파이7' 체험 부스를 운영한다고 2일...\n",
-            "\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!zip -r news_chroma_db.zip news_chroma_db"
-      ],
+      "execution_count": 8,
+      "id": "34IfEqj0UwED",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -260,12 +260,10 @@
         "id": "34IfEqj0UwED",
         "outputId": "410bb8ab-56ec-4d3e-dcff-437cea1f2b6a"
       },
-      "id": "34IfEqj0UwED",
-      "execution_count": 8,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "  adding: news_chroma_db/ (stored 0%)\n",
             "  adding: news_chroma_db/6b05eeff-fc5b-4d06-aede-601cdc2ec945/ (stored 0%)\n",
@@ -276,27 +274,26 @@
             "  adding: news_chroma_db/chroma.sqlite3 (deflated 63%)\n"
           ]
         }
+      ],
+      "source": [
+        "!zip -r news_chroma_db.zip news_chroma_db"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# zip 파일로 저장된 ChromaDB 압축 풀기\n",
-        "!unzip -o news_chroma_db.zip"
-      ],
+      "execution_count": 3,
+      "id": "7eiPxHx3VcB1",
       "metadata": {
-        "id": "7eiPxHx3VcB1",
-        "outputId": "bdb41457-dca3-4349-f6fa-6b7b00fb3a38",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7eiPxHx3VcB1",
+        "outputId": "bdb41457-dca3-4349-f6fa-6b7b00fb3a38"
       },
-      "id": "7eiPxHx3VcB1",
-      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Archive:  news_chroma_db.zip\n",
             "   creating: news_chroma_db/\n",
@@ -308,42 +305,34 @@
             "  inflating: news_chroma_db/chroma.sqlite3  \n"
           ]
         }
+      ],
+      "source": [
+        "# zip 파일로 저장된 ChromaDB 압축 풀기\n",
+        "!unzip -o news_chroma_db.zip"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# 똑같이 사용 가능\n",
-        "client = PersistentClient(path=\"news_chroma_db\")\n",
-        "collection = client.get_collection(\"news_articles\")\n",
-        "\n",
-        "# 예: 골프 관련 검색\n",
-        "results = collection.query(query_texts=[\"골프\"], n_results=3)\n",
-        "\n",
-        "for doc, meta in zip(results['documents'][0], results['metadatas'][0]):\n",
-        "    print(f\"제목: {meta['title']} / 날짜: {meta['date']} / 언론사: {meta['journal']}\")\n",
-        "    print(f\"내용: {doc[:100]}...\\n\")"
-      ],
+      "execution_count": 4,
+      "id": "2kRoJxiZPB2I",
       "metadata": {
-        "id": "2kRoJxiZPB2I",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "2kRoJxiZPB2I",
         "outputId": "5a72e480-c1ec-42cd-d708-a56d23f592d5"
       },
-      "id": "2kRoJxiZPB2I",
-      "execution_count": 4,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "/root/.cache/chroma/onnx_models/all-MiniLM-L6-v2/onnx.tar.gz: 100%|██████████| 79.3M/79.3M [00:01<00:00, 71.1MiB/s]\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "제목: [부고]박성준(경기대학교 스포츠과학부 교수)씨 모친상 / 날짜: 2025-05-04 14:41 / 언론사: 뉴시스\n",
             "내용: [수원=뉴시스]▲신옥분씨 별세, 박성준(경기대 스포츠과학부 교수)씨 모친상=4일, 서울성모 장례식장 8호실, 발인 6일 오전 9시40분. 02-2258-5965...\n",
@@ -356,20 +345,36 @@
             "\n"
           ]
         }
+      ],
+      "source": [
+        "# 똑같이 사용 가능\n",
+        "client = PersistentClient(path=\"news_chroma_db\")\n",
+        "collection = client.get_collection(\"news_articles\")\n",
+        "\n",
+        "# 예: 골프 관련 검색\n",
+        "results = collection.query(query_texts=[\"골프\"], n_results=3)\n",
+        "\n",
+        "for doc, meta in zip(results['documents'][0], results['metadatas'][0]):\n",
+        "    print(f\"제목: {meta['title']} / 날짜: {meta['date']} / 언론사: {meta['journal']}\")\n",
+        "    print(f\"내용: {doc[:100]}...\\n\")"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
+      "id": "lucpJzodVr0E",
       "metadata": {
         "id": "lucpJzodVr0E"
       },
-      "id": "lucpJzodVr0E",
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
+    "colab": {
+      "include_colab_link": true,
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
@@ -386,10 +391,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.12.7"
-    },
-    "colab": {
-      "provenance": [],
-      "include_colab_link": true
     }
   },
   "nbformat": 4,
