naver news api를 json 파일로 변환

--- a/news_api2json.ipynb
+++ b/news_api2json.ipynb
@@ -34,7 +34,7 @@
       "id": "22c5a5b2-5ee4-46cd-9ab7-466e5200d5ec",
       "metadata": {
         "id": "22c5a5b2-5ee4-46cd-9ab7-466e5200d5ec",
-        "outputId": "4a582754-1696-4467-92e5-d0a87f396f71",
+        "outputId": "27a726f9-a502-42dd-c1eb-98681b493d77",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -89,7 +89,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "a4ad4b8a-0f9d-4239-836d-06660da54a3a",
       "metadata": {
         "id": "a4ad4b8a-0f9d-4239-836d-06660da54a3a"
@@ -123,7 +123,7 @@
         "    \"etnews.com\": \"전자신문\",\n",
         "    \"ytn.co.kr\": \"YTN\",\n",
         "    \"tbs.seoul.kr\": \"TBS\",\n",
-        "    \"mbn.co.kr\": \"MBN\",\n",
+        "    \"mbn.co.kr\": \"MBN 뉴스\",\n",
         "    \"news.kmib.co.kr\": \"국민일보\",\n",
         "    \"newdaily.co.kr\": \"뉴데일리\",\n",
         "    \"yna.co.kr\": \"연합뉴스\",\n",
@@ -140,13 +140,20 @@
         "    \"nytimes.com\": \"The New York Times\",\n",
         "    \"digitaltoday.co.kr\": \"Digital Today\",\n",
         "    \"koreajoongangdaily.joins.com\": \"Korea JoongAng Daily\",\n",
-        "    \"ddaily.co.kr\": \"디지털 데일리\"\n",
+        "    \"ddaily.co.kr\": \"디지털 데일리\",\n",
+        "    \"hankyung.com\": \"한국경제신문\",\n",
+        "    \"sedaily.com\": \"서울경제\",\n",
+        "    \"sportsseoul.com\": \"스포츠서울\",\n",
+        "    \"joongboo.com\": \"중부일보\",\n",
+        "    \"nocutnews.co.kr\": \"노컷뉴스\",\n",
+        "    \"imbc.com\": \"MBC 뉴스\",\n",
+        "    \"news.mt.co.kr\": \"머니투데이\",\n",
         "}"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "7eef9265-883b-4434-8643-acb1d57f3e78",
       "metadata": {
         "id": "7eef9265-883b-4434-8643-acb1d57f3e78"
@@ -164,7 +171,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "613609a8-3706-43e1-bdc8-aa65d4039c90",
       "metadata": {
         "id": "613609a8-3706-43e1-bdc8-aa65d4039c90"
@@ -187,7 +194,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "c021175c-7de3-43f0-b5bf-08b960e61493",
       "metadata": {
         "id": "c021175c-7de3-43f0-b5bf-08b960e61493"
@@ -218,7 +225,7 @@
         "id": "bxSvJYZGRiJA"
       },
       "id": "bxSvJYZGRiJA",
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -277,7 +284,7 @@
         }
       },
       "id": "FlcrI6mlRhGI",
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -306,7 +313,7 @@
         }
       },
       "id": "MwOWIrUJRrva",
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -319,11 +326,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 5,
       "id": "2fb60e6a-91bf-4a08-a631-6dd6912952eb",
       "metadata": {
         "id": "2fb60e6a-91bf-4a08-a631-6dd6912952eb",
-        "outputId": "1f73d938-5ec8-4e91-972a-334b152778f6",
+        "outputId": "46b45db8-0fdb-4645-9361-012fb90fbb6a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -350,13 +357,141 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "id": "dc356d9e-2dad-4f77-85a2-298d419ed0b6",
       "metadata": {
-        "id": "dc356d9e-2dad-4f77-85a2-298d419ed0b6"
+        "id": "dc356d9e-2dad-4f77-85a2-298d419ed0b6",
+        "outputId": "7f75a2ff-30d5-467d-c01a-73da3e7dec55",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "교황 합성 사진 논란에…트럼프 &quot;아내는 귀엽다더라&quot;\n",
+            "트럼프 “교황 합성 사진은 장난…아내는 귀엽다고 해&quot;\n",
+            "트럼프, '교황 합성사진' 논란에 &quot;아내는 귀엽다고 하던데&quot;\n",
+            "“아내는 교황 합성사진 귀엽다던데”…트럼프 발언에 신자들 ‘부글부...\n",
+            "'교황 합성 사진 논란' 트럼프 &quot;아내는 귀엽다더라&quot;\n",
+            "트럼프, 교황 합성사진 논란에 &quot;아내가 귀엽다던데&quot;\n",
+            "애물단지서 스포츠메카로…용인 미르스타디움의 변신\n",
+            "[동정]김홍배 전 스포츠서울 출판기획팀 국장, 큰아들 결혼\n",
+            "인하대 스포츠파크 개장…지역사회에도 개방\n",
+            "LGU+, e스포츠 행사서 '와이파이7' 경쟁력 선보인다\n",
+            "스포츠 역베팅 사기사건 수사 속도…제주 센터장 2명 구속\n",
+            "인하대, 복합 스포츠 공간인 ‘인하 스포츠파크’ 개장\n",
+            "연예인 내세운 대형 스포츠센터 갑자기 폐업‥장기 회원권도 팔았는데\n",
+            "국내 시장 침체에도…'EV3' 덕에 전기차 판매는 더 늘었다\n",
+            "넥센타이어와 역동적인 모터스포츠 체험하세요\n",
+            "LG U+, e스포츠 행사서 4배 빠른 와이파이7 공유기 체험부스 운영\n",
+            "경찰, 스포츠 역베팅 제주 센터장 2명 구속\n",
+            "서울교육감배 학교스포츠클럽대회 10일 개막…9월까지\n",
+            "진주시,‘제64회 경상남도민체육대회’ 대장정 마무리\n",
+            "페라리, 모터스포츠 경험 담은 880마력의 ‘296 스페치알레’·’296 스페...\n",
+            "서울 학생 5만여명 참가하는 '학교스포츠클럽대회' 5월 개막\n",
+            "삼성라이온즈, 5월 포항 출격...프로야구 3연전 '포항' 달군다\n",
+            "제주경찰, 스포츠 역베팅 투자 사기 수사 속도…2명 구속\n",
+            "경과원, 서울국제가구전서 29억 상담 실적\n",
+            "복합스포츠문화공간 'SERI PAK with 용인' 5월 개관\n",
+            "인하대, 인하 스포츠파크 개장…기존 운동장 시설 개선\n",
+            "금호타이어 초고성능 퍼포먼스 '엑스타 스포츠' 출시\n",
+            "경기도, 46개 치매안심센터서...예방·진단·돌봄까지\n",
+            "서천군, 제3차 정책현답 추진…종합 스포츠단지 점검\n",
+            "[부고] 원영신(연세대 스포츠응용산업학과 명예교수)씨 별세 외\n",
+            "대전시교육청, 우리마을스포츠클럽 '동고동락' 협약식\n",
+            "남성이 여성보다 강하다?…&quot;익스트림 스포츠에선 안통해&quot;\n",
+            "대전시, 스포츠 꿈씨패밀리 캐릭터 첫 공개\n",
+            "크래프톤, 배틀그라운드 e스포츠 국제대회 ‘PGS 7’ 개최\n",
+            "형지엘리트-롯데온과 전략적 업무제휴 체결, 스포츠 사업 영역 넓힌다 ...\n",
+            "&quot;스포츠 환경 변화 대처하려면 스포츠청 설립 필요&quot;\n",
+            "‘피해금액 47억’ 스포츠 역베팅 사기…제주지역 센터장 2명 구속\n",
+            "용인시, 상현4지구 ‘지식산업센터’ 추가 설립\n",
+            "합천군, 체육 인프라 강화와 전국대회 유치…스포츠 중심 도시로 위상 ...\n",
+            "수원시, 반려동물 등록 자진신고 운영\n",
+            "수원시, 일제 강점기 격렬했던 저항의 역사 ‘한눈에’\n",
+            "장흥군, 내달 1일 파크골프장 '재개장'\n",
+            "넵튠·님블뉴런 ‘이터널 리턴’ 문체부 지정 이스포츠 전문 종목 됐다\n",
+            "‘미래·문화·스포츠제전’ 제64회 경남도체, 2일 진주서 ‘팡파르’\n",
+            "대전시, 대학생이 참여한 '스포츠 꿈씨패밀리' 첫선\n",
+            "안양시, 미취업 청년 어학·자격시험 응시료 최대 30만 원 지원\n",
+            "갯벌서 느끼는 모터스포츠… 관람 넘어 직접 체험한다\n",
+            "용인시, 고위험군 코로나19 예방접종 6월까지 연장\n",
+            "&quot;틀리면 돈 준대&quot; 제주 휩쓴 '스포츠 역베팅' 180명 속았다…47억원 피해\n",
+            "논두렁 잔디, NC파크 참사…프로리그 흥행의 이면[이종성의 스포츠 읽기...\n",
+            "대전시, 스포츠 꿈씨패밀리 캐릭터 첫 공개\n",
+            "장애인 스포츠 선수단, 진에어 날개 달았다\n",
+            "카카오게임즈, ‘배틀그라운드’ 대학생 e스포츠 ‘다나와배 대학최강...\n",
+            "진에어, 장애인 스포츠 선수 입단식 진행\n",
+            "경북도민체전 성공 기원 '신바람 행복 콘서트' 성료\n",
+            "넵튠 ‘이터널 리턴’, 문화체육관광부 지정 e스포츠 전문 종목으로 승...\n",
+            "위메이드, 스포츠 매개로 블록체인 기술 대중화 앞장\n",
+            "쿠팡, 스포츠∙레저용품 1만여개 60%대 할인하는 '레저대란' 연다\n",
+            "정명근“부처의 가르침 따라 화성시를 자비롭고 희망찬 도시로 만들겠다...\n",
+            "넵튠-님블뉴런 '이터널 리턴', 2년 만에 문체부 e스포츠 전문 종목 승격\n",
+            "경찰, 스포츠 역베팅 제주 센터장 2명 구속\n",
+            "경기도, 분쟁조정 통해 가맹본부와 점주 간 상생협력\n",
+            "대한한의사협회, 국가대표선수협회와 선수 건강 증진 협약\n",
+            "크래프톤, 배틀그라운드 e스포츠 국제대회 ‘PGS 7’ 개최\n",
+            "美GM 수출 캐딜락은 '무관세' 타고 질주하는데…\n",
+            "대전시, 스포츠 꿈씨패밀리 캐릭터 공개...역동성과 친근함 강화\n",
+            "넵튠-님블뉴런, '이터널 리턴' 문체부 이스포츠 종목으로 승격\n",
+            "[포토뉴스]강릉시, 보령시 고향사랑기부금 1500만원 교차기부\n",
+            "이터널 리턴, 문체부 지정 e스포츠 전문 종목 승격\n",
+            "위메이드, 블록체인 대중화 위해 스포츠 분야 주목\n",
+            "스포츠 역베팅 투자자 모은 60대 여성 체포\n",
+            "기아, 니로 하이브리드 신규 트림 출시…3206만원\n",
+            "이장우 대전시장 &quot;프로스포츠 시민 자긍심, 행정 시너지로 드높여야&quot;\n",
+            "MZ 스포츠 브랜드 오닐 “리유저블백 받아가세요”\n",
+            "안양대 스포츠응용산업학과, 산학협력 연계 특강으로 재학생 실무역량...\n",
+            "수원시, 다자녀가정 100가구 무료 스포츠 관람 '혜택'\n",
+            "콘티넨탈, 여름용 고성능 타이어 ‘스포츠콘택트7’ 예약 주문 개시\n",
+            "LCK 홈경기, 수원에서 처음 열려…이재준 수원시장 &quot;수원을 마음껏 즐겨...\n",
+            "2025 소노도그스포츠리그, 5월 개막…국가대표팀 총출동\n",
+            "배틀그라운드, e스포츠 국제대회 ‘PGS 7’ 개최…젠지→T1 韓 5개팀 출전\n",
+            "넵튠-님블뉴런 '이터널 리턴', 문화체육관광부 지정 e스포츠 전문 종목...\n",
+            "&quot;4배 빠른 와이파이7 느껴봐&quot;…LG U+, 젠지 홈스탠드서 체험 부스 운영\n",
+            "'4번 타자' 꿈돌이 등장… 대전시, 스포츠 꿈씨패밀리 선보인다\n",
+            "대구보건대 스포츠재활학과-G&amp;H BIO, 산학협력\n",
+            "스포츠 역베팅 투자자 모은 60대 여성 체포\n",
+            "목포시, 생활체육대축전 성공 개최로 도시 브랜드 향상\n",
+            "스포츠 스타들에게 무슨 일이…강동희·임창용 나란히 '징역형'\n",
+            "속초시 &lt;청소년 버스 무료 이용 지원 사업&gt; 사전 준비 박차!\n",
+            "[약손+] 삶의 질 높이는 제3의학 ‘재활 치료’ ③재활의학 분야는?\n",
+            "[북한 영상] 소년단 야영소 해양 스포츠\n",
+            "쿠팡, 달리기 열풍에 '러닝 맞춤템' 할인\n",
+            "하나은행, 농구 국가대표팀 공식 후원… 이호성 &quot;든든한 스포츠 지원&quot;\n",
+            "양산시, 5월 대규모 체육행사로 스포츠 열기 고조\n",
+            "춘천시, 폭염저감시설 확대...“시민이 시원해야 여름이 안전하다”\n",
+            "포르쉐, 963 기반의 새로운 초고성능 스포츠카 선보일까?\n",
+            "66만㎞ 달린 아이오닉5, 배터리 잔존수명 87%였다\n",
+            "화천 전국 단위 스포츠대회 잇단 개최 ‘지역경제 UP’\n",
+            "“슛~ 골! 로봇이 축구경기 뛴다”…中 첫 휴머노이드로봇 스포츠대회\n",
+            "모터스포츠도 '돈' 되는 차에?…현대차, 제네시스에 힘 준다 [취재여담...\n",
+            "&quot;입장권 NFT 판매&quot;…위메이드, 스포츠로 '블록체인 대중화' 앞장\n"
+          ]
+        }
+      ],
+      "source": [
+        "# \"journal\" 값이 \"Unknown\"인 데이터만 추출\n",
+        "unknown_journal_data = [item for item in news_data if item['journal'] == 'Unknown']\n",
+        "\n",
+        "# title만 한 줄씩 출력\n",
+        "for item in unknown_journal_data:\n",
+        "    print(item['title'])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "8n46K3zFLO7T"
+      },
+      "id": "8n46K3zFLO7T",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
