naver news api 정보를 json으로 저장

--- a/news_api2json.ipynb
+++ b/news_api2json.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 2,
       "id": "58b20dce-7dc9-4102-99c0-a8f8eac38408",
       "metadata": {
         "id": "58b20dce-7dc9-4102-99c0-a8f8eac38408"
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "22c5a5b2-5ee4-46cd-9ab7-466e5200d5ec",
       "metadata": {
         "id": "22c5a5b2-5ee4-46cd-9ab7-466e5200d5ec",
@@ -89,7 +89,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "a4ad4b8a-0f9d-4239-836d-06660da54a3a",
       "metadata": {
         "id": "a4ad4b8a-0f9d-4239-836d-06660da54a3a"
@@ -153,7 +153,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "7eef9265-883b-4434-8643-acb1d57f3e78",
       "metadata": {
         "id": "7eef9265-883b-4434-8643-acb1d57f3e78"
@@ -171,7 +171,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "613609a8-3706-43e1-bdc8-aa65d4039c90",
       "metadata": {
         "id": "613609a8-3706-43e1-bdc8-aa65d4039c90"
@@ -194,7 +194,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "id": "c021175c-7de3-43f0-b5bf-08b960e61493",
       "metadata": {
         "id": "c021175c-7de3-43f0-b5bf-08b960e61493"
@@ -225,7 +225,7 @@
         "id": "bxSvJYZGRiJA"
       },
       "id": "bxSvJYZGRiJA",
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -249,7 +249,7 @@
         "id": "5u3gykDxMEIX"
       },
       "id": "5u3gykDxMEIX",
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -303,7 +303,7 @@
         }
       },
       "id": "FlcrI6mlRhGI",
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -385,7 +385,7 @@
         }
       },
       "id": "MwOWIrUJRrva",
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -398,7 +398,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "id": "2fb60e6a-91bf-4a08-a631-6dd6912952eb",
       "metadata": {
         "id": "2fb60e6a-91bf-4a08-a631-6dd6912952eb",
@@ -429,7 +429,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "id": "dc356d9e-2dad-4f77-85a2-298d419ed0b6",
       "metadata": {
         "id": "dc356d9e-2dad-4f77-85a2-298d419ed0b6",
@@ -475,7 +475,7 @@
         }
       },
       "id": "8n46K3zFLO7T",
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -488,11 +488,69 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# 저장된 JSON 파일 열기\n",
+        "with open(\"filtered_news_data.json\", \"r\", encoding=\"utf-8\") as f:\n",
+        "    news_data = json.load(f)\n",
+        "\n",
+        "# 첫 번째 뉴스의 content 확인\n",
+        "first_news_content = news_data[0]\n",
+        "\n",
+        "print(first_news_content)"
+      ],
       "metadata": {
-        "id": "W_eds3Te6UvM"
+        "id": "W_eds3Te6UvM",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a6b7700e-7cf1-40ab-870c-c5587e8f9326"
       },
       "id": "W_eds3Te6UvM",
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'title': '체코 원전 계약 제동…국내 건설업계 ‘초긴장’', 'date': '2025-05-07 10:20', 'link': 'https://n.news.naver.com/mnews/article/003/0013225746?sid=101', 'content': '두산에너빌리티·대우건설 수조원 수주 여부 달려[두코바니(체코)=AP/뉴시스]체코 두코바니에 있는 두코바니 원자력발전소의 냉각탑 4개의 모습.  2022.11.30[서울=뉴시스] 김종민 기자 = 체코 법원이 한국수력원자력(한수원)의 신규 원전 건설 계약에 제동을 걸면서, 국내 원전 관련 건설·기자재 업체들이 비상에 걸렸다. 특히 두산에너빌리티와 대우건설 등 핵심 기업들의 수조 원대 수주 여부가 불투명해지며 건설업계 전반에 긴장감이 감돌고 있다.체코 브르노 지방 법원은 프랑스전력공사(EDF)가 제기한 가처분 신청을 일부 인용하며, 한수원과 체코전력공사(CEZ) 간 7일 예정돼 있던 최종 계약서 서명을 금지했다. 이에 따라 양국 정부와 국회 대표단까지 참석한 계약 서명식은 전격 취소됐으며, 한국 대표단은 별다른 성과 없이 귀국길에 오를 수밖에 없게 됐다.이번 가처분 결정은 EDF가 체코 공정거래청의 입찰 승인 과정에 문제가 있다며 소송을 제기한 데 따른 것으로, 법원은 “회복 불가능한 결과를 초래할 수 있다”는 이유로 계약 체결을 일시 중단시켰다.문제가 된 체코 원전 프로젝트는 한수원이 주관하고, 한전기술, 한전KPS, 한전원자력연료 등 한전 계열사와 함께 두산에너빌리티, 대우건설 등이 참여하는 ‘팀 코리아’ 형태로 진행돼 왔다. 전체 사업 규모는 약 26조원 이상으로 추산되며, 이 가운데 두산에너빌리티는 원자로 등 주기기 공급, 대우건설은 주요 시공을 담당하는 핵심 역할을 맡고 있다.이번 법원 결정은 단순한 일정 지연을 넘어, 유럽 내 원전 수출 전반에 불확실성을 키우는 ‘법률 리스크’의 시작이라는 우려도 커지고 있다. EDF는 유럽연합(EU) 집행위원회에도 한국 정부의 지원이 EU 보조금 규제에 위배된다는 문제를 제기하고 있어, 향후 계약 재개 시점도 가늠하기 어려운 상황이다.한 에너지 업계 전문가는 “한국의 원전 기술력은 이미 체코 정부와 발주처인 CEZ로부터 가장 경쟁력 있는 제안이라는 평가를 받았지만, 유럽 내 에너지 주권 문제, 경쟁국의 정치·법률적 압박 등 비경제적 변수들이 리스크로 부상하고 있다”고 진단했다.한수원은 “체코 측과 긴밀히 협의해 계약 서명 일정이 조속히 다시 잡히도록 최선을 다할 것”이라는 입장을 밝혔지만, 국내 기업들은 체코 외에도 폴란드·사우디아라비아 등에서 진행 중인 다른 원전 수주전에도 불똥이 튈까 우려하는 분위기다.건설업계 한 관계자는 “계약 체결이 하루를 남기고 좌초된 셈이라 충격이 크다”며 “수주 자체가 무산되지는 않더라도, 법적 쟁송이 장기화할 경우 수개월 이상 지연될 가능성이 높고, 이는 수주 실적과 기업 실적 전망에도 큰 부담이 될 것”이라고 말했다．', 'journal': '뉴시스'}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 조건에 맞는 항목 개수 세기\n",
+        "count = sum(1 for item in news_data if item.get(\"content\") == \"본문을 크롤링할 수 없습니다.\")\n",
+        "\n",
+        "print(f'\"본문을 크롤링할 수 없습니다.\"인 항목 수: {count}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Vt54YXQuiPxJ",
+        "outputId": "cf1fab19-2894-459f-df5a-4819a90fcb7b"
+      },
+      "id": "Vt54YXQuiPxJ",
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\"본문을 크롤링할 수 없습니다.\"인 항목 수: 0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "r081MChDjFeu"
+      },
+      "id": "r081MChDjFeu",
       "execution_count": null,
       "outputs": []
     }
